--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --primary-colour: hsl(32, 99%, 50%);
+  --secondary-colour: hsl(0, 100%, 56%);
+  --background-colour: hsl(0, 0%, 92%);
+  --background-colour--2: hsl(192, 29%, 82%);
+  --text-colour: hsl(0, 0%, 0%);
+  --text-colour--2: hsl(0, 0%, 100%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Remove default margin & font*/
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd,
+button {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button {
+  border: none;
+  background: none;
 }
 
-.card {
-  padding: 2em;
+button:hover {
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+button:focus-visible {
+  border: 2px solid blue;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
