--- a/frontend/src/pages/admin/Navbar.module.css
+++ b/frontend/src/pages/admin/Navbar.module.css
@@ -3,6 +3,7 @@ nav.navbar {
   border-radius: 24px;
   background-color: var(--text-colour--2);
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   padding: 2rem 0.5rem;
@@ -27,9 +28,16 @@ nav.navbar button > p {
   display: none;
 }
 
+footer {
+  display: none;
+  position: absolute;
+  bottom: 0.5rem;
+}
+
 @media screen and (min-width: 768px) {
   nav.navbar {
     padding: 2rem 1rem;
+    flex-direction: column;
   }
 
   nav.navbar ul {
@@ -38,6 +46,10 @@ nav.navbar button > p {
   }
 
   nav.navbar button > p {
+    display: block;
+  }
+
+  footer {
     display: block;
   }
 }
