--- a/frontend/src/components/ParkingStats.module.css
+++ b/frontend/src/components/ParkingStats.module.css
@@ -3,6 +3,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  margin: 1rem 0;
   padding: 1rem 2rem;
   background-color: var(--text-colour--2);
   border-radius: 24px;
